[gd_scene load_steps=5 format=3 uid="uid://cf3q6hagdskvo"]

[ext_resource type="Script" path="res://menus/multiplayer/host_or_connect/host/host.gd" id="1_erbci"]
[ext_resource type="Texture2D" uid="uid://bfhbviaky3jmm" path="res://menus/sprites/background.jpg" id="1_h5n4o"]
[ext_resource type="Script" path="res://menus/multiplayer/host_or_connect/host/advanced_toggle.gd" id="2_wpg21"]
[ext_resource type="PackedScene" uid="uid://xvtrv8cttec7" path="res://menus/go_to_scene_button.tscn" id="3_k12pw"]

[node name="Host" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_erbci")
lobby_scene_path = "res://menus/multiplayer/lobby/lobby.tscn"

[node name="Christian" type="Sprite2D" parent="."]
modulate = Color(0.396078, 0.396078, 0.396078, 1)
position = Vector2(160, 96)
scale = Vector2(0.166667, 0.16)
texture = ExtResource("1_h5n4o")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
offset_right = 320.0
offset_bottom = 192.0

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/CenterContainer"]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 2

[node name="NameLabel" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Name"
horizontal_alignment = 1

[node name="NameEdit" type="LineEdit" parent="ScrollContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
max_length = 128

[node name="PortLabel" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Port"
horizontal_alignment = 1

[node name="PortEdit" type="LineEdit" parent="ScrollContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "2018"
alignment = 1
max_length = 5

[node name="AdvancedToggle" type="CheckButton" parent="ScrollContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Advanced"
script = ExtResource("2_wpg21")

[node name="AdvancedContainer" type="VBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="IpAddrLabel" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/AdvancedContainer"]
layout_mode = 2
text = "Ip address"
horizontal_alignment = 1

[node name="IpAddrEdit" type="LineEdit" parent="ScrollContainer/CenterContainer/VBoxContainer/AdvancedContainer"]
layout_mode = 2
text = "0.0.0.0"
alignment = 1
max_length = 15

[node name="MaxPlayersLabel" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/AdvancedContainer"]
layout_mode = 2
text = "Max players"
horizontal_alignment = 1

[node name="MaxPlayersEdit" type="LineEdit" parent="ScrollContainer/CenterContainer/VBoxContainer/AdvancedContainer"]
layout_mode = 2
text = "2"
alignment = 1
max_length = 4

[node name="Ok" type="Button" parent="ScrollContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Ok"

[node name="ReturnButton" parent="ScrollContainer/CenterContainer/VBoxContainer" node_paths=PackedStringArray("parent_scene") instance=ExtResource("3_k12pw")]
layout_mode = 2
text = "Return"
parent_scene = NodePath("../../../..")
next_scene_path = "res://menus/multiplayer/host_or_connect/host_or_connect.tscn"

[connection signal="toggled" from="ScrollContainer/CenterContainer/VBoxContainer/AdvancedToggle" to="ScrollContainer/CenterContainer/VBoxContainer/AdvancedToggle" method="_on_toggled"]
[connection signal="pressed" from="ScrollContainer/CenterContainer/VBoxContainer/Ok" to="." method="_on_ok_pressed"]
